<resources>
    <string name="app_name">西瓜Vpn</string>
    <string name="title_home">西瓜</string>
    <string name="title_options">设置</string>
    <string name="start_run">启动</string>
    <string name="stop_run">停止</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="result">操作结果</string>
    <string name="options">选项</string>
    <string name="save_success">保存成功</string>
    <string name="click_again_exit">再点击一下，退出应用</string>
    <string name="ip">ip地址</string>
    <string name="port">端口</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="apply">应用</string>
    <string name="apply_success">应用成功！</string>

    <string name="not_connect">未连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中...</string>
    <string name="disconnecting">断开连接中...</string>
    <string name="error_msg">错误:</string>
    <string name="connect_closed">服务器断开连接</string>
    <string name="can_not_connect_server">无法连接到服务器</string>
    <string name="rev_bad_length_packet">接收到错误长度包</string>
    <string name="rev_bad_packet">接收到坏包</string>
    <string name="rev_packet_error">接收的包异常</string>
    <string name="send_packet_error">包发送给服务器异常</string>

</resources>
