<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vcvnc.app.OptionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F2F2F2"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/user_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/options"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_ip_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="1dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_port_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="1dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_user_name_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="1dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_user_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_password"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_user_password_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="1dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_dns1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dns1"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_dns1_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="1dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_shape_wihte_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/options_dns2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dns2"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/options_dns2_value"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shape_input"
                    android:ems="10"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="1dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/options_save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/ic_button_default"
                    android:text="@string/apply"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>